# HeliosEngine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  README_8md.html  access__decl_8hpp.html  access__decl_8hpp.js  access__decl_8hpp_source.html  access__policy_8hpp.html  access__policy_8hpp.js  access__policy_8hpp_source.html  aligned__alloc_8cpp.html  aligned__alloc_8cpp_source.html  aligned__alloc_8hpp.html  aligned__alloc_8hpp.js  aligned__alloc_8hpp_source.html  allocator__traits_8hpp.html  allocator__traits_8hpp.js  allocator__traits_8hpp_source.html  annotated.html  annotated_dup.js  app_2include_2helios_2app_2builtin_2executor_8hpp.html  app_2include_2helios_2app_2builtin_2executor_8hpp.js  app_2include_2helios_2app_2builtin_2executor_8hpp_source.html  app_2include_2helios_2app_2scheduler_8hpp.html  app_2include_2helios_2app_2scheduler_8hpp_source.html  app_2src_2pch_8hpp.html  app_2src_2pch_8hpp_source.html  app_2src_2scheduler_8cpp.html  app_2src_2scheduler_8cpp_source.html  app_8cpp.html  app_8cpp.js  app_8cpp_source.html  (+1586 more)
Game/: CMakeLists.txt
Game/src/: Game.cpp  VoxelCraft.cpp
Game/src/Layers/: GameLayer.cpp  GameLayer.h
HeliosEngine/: CMakeLists.txt
HeliosEngine/Assets/Shaders/: Cube.frag  Cube.glsl  Cube.vert  Line.frag  Mesh.frag  Mesh.vert  Skybox.frag  Skybox.vert
HeliosEngine/src/: HeliosEngine.h  pch.h
HeliosEngine/src/HeliosEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  PathManager.cpp  PathManager.h  Timestep.h  UUID.h  Window.cpp  Window.h
VoxelCraft/: CMakeLists.txt
VoxelCraft/Assets/Shaders/: Cube.glsl  blueFrag.frag  blueShader.glsl  blueVertex.vert  justShader.glsl  vertexSrc.vert
VoxelCraft/src/: CMakeLists.txt  GameLayer.cpp  GameLayer.h  VoxelCraft.cpp
VoxelEngine/: CMakeLists.txt
VoxelEngine/Assets/Shaders/: Cube.frag  Cube.glsl  Cube.vert  Line.glsl  Line.vert  Mesh.frag  Mesh.vert  Renderer_Circle.glsl  Renderer_Quad.glsl  Skybox.glsl  Triangle.vert
VoxelEngine/src/: CMakeLists.txt  VoxelEngine.h  pch.h  vepch.cpp  vepch.h
VoxelEngine/src/Assets/: CMakeLists.txt
VoxelEngine/src/Platform/: CMakeLists.txt
VoxelEngine/src/VoxelEngine/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Timestep.h  Window.h
examples/: CMakeLists.txt  README.md
examples/app/: CMakeLists.txt  plugin.cpp  plugin_group.cpp  runner.cpp
examples/app/dynamic_plugin/: CMakeLists.txt
examples/async_sub_apps/: CMakeLists.txt
examples/async_sub_apps/src/: main.cpp
examples/cmake/: ExampleUtils.cmake
examples/custom_module/: CMakeLists.txt  Module.cmake  README.md
examples/custom_module/src/: demo.cpp  greeting.cpp
examples/custom_module/tests/: greeting.cpp
examples/dynamic_plugins/: CMakeLists.txt
examples/dynamic_plugins/plugins/: example_plugin.cpp
examples/dynamic_plugins/shared/: plugin_types.hpp
examples/dynamic_plugins/src/: main.cpp
examples/ecs/: CMakeLists.txt  component.cpp  component_bundle.cpp  entity.cpp  resource.cpp  stage.cpp  system.cpp
examples/ecs/commands/: CMakeLists.txt
examples/ecs/components/: CMakeLists.txt
examples/ecs/entities/: CMakeLists.txt
examples/ecs/messages/: CMakeLists.txt
examples/ecs/queries/: CMakeLists.txt
examples/ecs/resources/: CMakeLists.txt
examples/ecs/schedules/: CMakeLists.txt
examples/ecs/stages/: CMakeLists.txt
examples/ecs/systems/: CMakeLists.txt
examples/overlapping_sub_apps/: CMakeLists.txt
examples/overlapping_sub_apps/src/: main.cpp
examples/plugins/: CMakeLists.txt
examples/plugins/src/: main.cpp
examples/profile/: CMakeLists.txt  profile.cpp
examples/profile/src/: main.cpp
examples/rpg_text_game/: CMakeLists.txt
examples/rpg_text_game/include/: components.hpp  events.hpp  modules.hpp  resources.hpp  systems.hpp
examples/rpg_text_game/src/: main.cpp
examples/simple/: CMakeLists.txt  simple.cpp
examples/simple/src/: main.cpp
examples/sub_apps/: CMakeLists.txt
examples/sub_apps/src/: main.cpp
modules/renderer/: CMakeLists.txt  README.md
modules/renderer/examples/: renderer_integration.cpp  renderer_integration.h
modules/renderer/src/: renderer.cpp
modules/renderer/tests/: basic_tests.cpp
src/app/: CMakeLists.txt  Module.cmake  README.md
src/app/src/: app.cpp  application.cpp  pch.hpp  scheduler.cpp  sub_app.cpp
src/app/tests/: app.cpp  application.cpp  dynamic_plugin.cpp  plugin.cpp  plugin_group.cpp  runners.cpp  scheduler.cpp  schedules.cpp  sub_app.cpp
src/async/: CMakeLists.txt  Module.cmake  README.md
src/async/tests/: async_task.cpp  common.cpp  executor.cpp  future.cpp  sub_task_graph.cpp  task.cpp  task_graph.cpp
src/core/: CMakeLists.txt  Module.cmake  README.md
src/core/src/: assert.cpp  core_pch.cpp  pch.hpp  stacktrace.cpp
src/core/tests/: assert.cpp  cstring_view.cpp  delegate.cpp  stacktrace.cpp  uuid.cpp
src/ecs/: CMakeLists.txt  Module.cmake  README.md
src/ecs/src/: pch.hpp
src/ecs/tests/: builtin_commands.cpp  builtin_messages.cpp  world.cpp  world_view.cpp
src/memory/: CMakeLists.txt  Module.cmake  README.md
src/memory/src/: aligned_alloc.cpp  arena_allocator.cpp  fixed_arena_allocator.cpp  fixed_free_list_allocator.cpp  fixed_pool_allocator.cpp  fixed_stack_allocator.cpp  free_list_allocator.cpp  global_alloc.cpp  pch.hpp  pool_allocator.cpp  stack_allocator.cpp
src/memory/tests/: aligned_alloc.cpp  allocator_traits.cpp  arena_allocator.cpp  common.cpp  fixed_arena_allocator.cpp  fixed_free_list_allocator.cpp  fixed_pool_allocator.cpp  fixed_stack_allocator.cpp  frame_allocator.cpp  free_list_allocator.cpp  pool_allocator.cpp  (+2 more)
src/modules/: CMakeLists.txt
src/profile/: CMakeLists.txt  Module.cmake  README.md
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/modules/: CMakeLists.txt  README.md
(+4614 files in other folders)
